Add changelog and readme

--- a/traefik_mesh/datadog_checks/traefik_mesh/data/conf.yaml.example
+++ b/traefik_mesh/datadog_checks/traefik_mesh/data/conf.yaml.example
@@ -49,7 +49,7 @@ instances:
     ## Endpoint exposing the Traefic Proxy Prometheus metrics. For more information refer to:
     ## https://doc.traefik.io/traefik/observability/metrics/prometheus/
     #
-  - openmetrics_endpoint: http://<PROXY_ENDPOINT>:<PROXY_PORT>
+  - openmetrics_endpoint: http://<PROXY_ENDPOINT>:<METRICS_PORT>
 
     ## @param raw_metric_prefix - string - optional
     ## A prefix that is removed from all exposed metric names, if present.
@@ -625,7 +625,12 @@ instances:
     #   exclude:
     #   - <EXCLUDE_REGEX>
 
-    ## @param traefik_controller_api_endpoint - string - optional - default: http://<CONTROLLER_ENDPOINT>:<CONTROLLER_PORT>
+    ## @param traefik_proxy_api_endpoint - string - optional - default: http://<PROXY_ENDPOINT>:<API_PORT>
+    ## URL of the Traefik Mesh proxy to query.
+    #
+    # traefik_proxy_api_endpoint: http://<PROXY_ENDPOINT>:<API_PORT>
+
+    ## @param traefik_controller_api_endpoint - string - optional - default: http://<CONTROLLER_ENDPOINT>:<API_PORT>
     ## URL of the Traefik Mesh controller to query.
     #
-    # traefik_controller_api_endpoint: http://<CONTROLLER_ENDPOINT>:<CONTROLLER_PORT>
+    # traefik_controller_api_endpoint: http://<CONTROLLER_ENDPOINT>:<API_PORT>
