Create captured-traces directory if it doesn't exist while submitting traces

--- a/.github/workflows/submit-traces.yml
+++ b/.github/workflows/submit-traces.yml
@@ -36,6 +36,9 @@ jobs:
         path: captured-traces
         merge-multiple: true
 
+    - name: Create captured-traces directory
+      run: mkdir -p captured-traces
+      
     - name: Replay
       if: ${{ hashFiles('captured-traces') != '' }}
       run: |-
