--- a/.github/workflows/submit-traces.yml
+++ b/.github/workflows/submit-traces.yml
@@ -36,6 +36,7 @@ jobs:
     - name: Replay
       if: steps.download.outcome == 'success'
       run: |-
+        mkdir -p captured-traces
         cd captured-traces
         for request in *; do
           # The file could be empty if there were no traces, i.e. no Agent
