--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -104,6 +104,18 @@ jobs:
       # Options
       standard: true
     secrets: inherit
+
+  test-windows-integrations:
+    needs:
+    - cache
+
+    uses: ./.github/workflows/test-windows-integrations.yml
+    with:
+      repo: core
+
+      # Options
+      standard: true
+    secrets: inherit
       
   test-integrations:
     needs:
