--- a/.github/workflows/pr-all.yml
+++ b/.github/workflows/pr-all.yml
@@ -75,6 +75,16 @@ jobs:
       test-py2: true
     secrets: inherit
 
+  test-windows-integrations:
+    uses: ./.github/workflows/test-windows-integrations.yml
+    with:
+      repo: core
+
+      # Options
+      standard: true
+      test-py2: true
+    secrets: inherit
+
   test-integrations:
     uses: ./.github/workflows/test-all.yml
     with:
