--- a/.github/workflows/weekly-latest.yml
+++ b/.github/workflows/weekly-latest.yml
@@ -15,8 +15,17 @@ jobs:
       latest: true
     secrets: inherit
 
-  test-dbm:
-    uses: ./.github/workflows/test-dbm.yml
+  test-dbm-integrations:
+    uses: ./.github/workflows/test-dbm-integrations.yml
+    with:
+      repo: core
+
+      # Options
+      latest: true
+    secrets: inherit
+
+  test-container-integrations:
+    uses: ./.github/workflows/test-container-integrations.yml
     with:
       repo: core
 
