--- a/.github/workflows/nightly-py2.yml
+++ b/.github/workflows/nightly-py2.yml
@@ -17,8 +17,19 @@ jobs:
       test-py3: false
     secrets: inherit
   
-  test-dbm:
-    uses: ./.github/workflows/test-dbm.yml
+  test-dbm-integrations:
+    uses: ./.github/workflows/test-dbm-integrations.yml
+    with:
+      repo: core
+
+      # Options
+      standard: true
+      test-py2: true
+      test-py3: false
+    secrets: inherit
+  
+  test-container-integrations:
+    uses: ./.github/workflows/test-container-integrations.yml
     with:
       repo: core
 
