--- a/esxi/pyproject.toml
+++ b/esxi/pyproject.toml
@@ -38,6 +38,7 @@ dynamic = [
 [project.optional-dependencies]
 deps = [
     "pyvmomi==8.0.2.0.1; python_version > '3.0'",
+    "pysocks==1.7.1"
 ]
 
 [project.urls]
