--- a/esxi/datadog_checks/esxi/data/conf.yaml.example
+++ b/esxi/datadog_checks/esxi/data/conf.yaml.example
@@ -9,6 +9,11 @@ init_config:
     #
     # service: <SERVICE>
 
+    ## @param proxy - string - optional - default: 
+    ## SOCKS Proxy to use for all instances.
+    #
+    # proxy: socks5://<PROXY_SERVER>:<PORT>
+
 ## Every instance is scheduled independently of the others.
 #
 instances:
@@ -128,10 +133,10 @@ instances:
     # excluded_host_tags:
     #   - <HOST_TAG>
 
-    ## @param proxy - string - optional - default: http://<PROXY_SERVER_FOR_HTTP>:<PORT>
-    ## SOCKS Proxy to use for this instance.
+    ## @param proxy - string - optional - default: 
+    ## SOCKS Proxy to use for this instance. Overrides the `proxy` setting in `init_config`.
     #
-    # proxy: http://<PROXY_SERVER_FOR_HTTP>:<PORT>
+    # proxy: socks5://<PROXY_SERVER>:<PORT>
 
     ## @param ssl_verify - boolean - optional - default: true
     ## Set to false to disable SSL verification when connecting to the ESXi host
