trigger with change, not with commit

--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -34,12 +34,10 @@ jobs:
         app-id: ${{ secrets.DD_AGENT_INTEGRATIONS_BOT_APP_ID }}
         private-key: ${{ secrets.DD_AGENT_INTEGRATIONS_BOT_PRIVATE_KEY }}
         repositories: integrations-core
-    - name: Create trigger commit
-      id: trigger-commit
+    - name: Create trigger change
+      id: tpr
       run: |-
-        git config --global user.email "agent-integrations-dependency-bot@datadoghq.com"
-        git config --global user.name "Agent Integrations Dependency Bot"
-        git commit --allow-empty -m "trigger commit"
+        touch trigger-commit
     - name: Create Pull Request
       id: cpr
       uses: peter-evans/create-pull-request@v5
@@ -88,6 +86,7 @@ jobs:
           ${{ github.token }}
       run: |-
         gh pr checkout ${{ steps.cpr.outputs.pull-request-number }}
+        git rm trigger-commit
         ddev release changelog new added -m "Update dependencies"
         git config --global user.email "agent-integrations-dependency-bot@datadoghq.com"
         git config --global user.name "Agent Integrations Dependency Bot"
