--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -43,7 +43,7 @@ jobs:
       uses: peter-evans/create-pull-request@v5
       with:
         token: ${{ steps.token-generator.outputs.token }}
-        commit-message: Update dependencies
+        commit-message: trigger commit
         body: |
           ### What does this PR do?
           Update the dependencies
@@ -91,5 +91,5 @@ jobs:
         git config --global user.email "agent-integrations-dependency-bot@datadoghq.com"
         git config --global user.name "Agent Integrations Dependency Bot"
         git add .
-        git commit --amend --no-edit
-        git push origin HEAD --force
+        git commit -am "Update Dependencies"
+        git push origin HEAD
