hard-code my username to test

--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -83,6 +83,8 @@ jobs:
       run: |-
         gh pr checkout ${{ steps.cpr.outputs.pull-request-number }}
         ddev release changelog new added -m "Update dependencies"
+        git config --global user.email "ilia.kurenkov@datadoghq.com"
+        git config --global user.name "Ilia Kurenkov"
         git add .
         git commit -m "Update Changelog"
         git push origin HEAD
