--- a/rabbitmq/manifest.json
+++ b/rabbitmq/manifest.json
@@ -57,7 +57,9 @@
       "disk_usage": "assets/monitors/disk_usage.json",
       "message_unacknowledge_rate_anomaly": "assets/monitors/message_unacknowledge_rate_anomaly.json",
       "disk_usage_prometheus": "assets/monitors/disk_usage_prometheus.json",
-      "message_unack_prometheus": "assets/monitors/message_unack_prometheus.json"
+      "message_unack_prometheus": "assets/monitors/message_unack_prometheus.json",
+      "consumers_at_zero": "assets/monitors/consumers_at_zero.json",
+      "message_ready": "assets/monitors/message_ready.json"
     },
     "saved_views": {
       "pid_overview": "assets/saved_views/status_overview.json",
