Updating the setup scripts for the Agent Integrations Openstack Labs in gcp (#17594)
* Updated default script

* Updated ironic script

Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

* Updated octavia script

Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

* refactor e2e-gcp structure and files

* Added steps to install podman

* Added local.conf for ceph

* Added install_deps.sh as a separated file

* Added swift component

Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

---------

Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>
Co-authored-by: Jose Manuel Almaza <josemanuel.almaza@datadoghq.com>

--- a/openstack_controller/tests/e2e-gcp/ironic/local.conf
+++ b/openstack_controller/tests/e2e-gcp/ironic/local.conf
@@ -1,13 +1,3 @@
-#!/bin/bash
-sudo apt update
-sudo apt upgrade -y
-sudo useradd -s /bin/bash -d /opt/stack -m stack
-echo "stack ALL=(ALL) NOPASSWD: ALL" | sudo tee -a /etc/sudoers
-cd /opt/stack
-sudo git clone https://opendev.org/openstack/devstack
-cd devstack
-sudo git checkout stable/zed
-cat <<EOF | sudo tee -a local.conf
 [[local|localrc]]
 # Credentials
 ADMIN_PASSWORD=password
@@ -20,8 +10,8 @@ SERVICE_TOKEN=password
 GLANCE_LIMIT_IMAGE_SIZE_TOTAL=5000
 
 # Configure ironic from ironic devstack plugin.
-enable_plugin ironic https://opendev.org/openstack/ironic stable/zed
-enable_plugin ironic-ui https://github.com/openstack/ironic-ui stable/zed
+enable_plugin ironic https://opendev.org/openstack/ironic stable/2023.1
+enable_plugin ironic-ui https://github.com/openstack/ironic-ui stable/2023.1
 
 # Create 3 virtual machines to pose as Ironic's baremetal nodes.
 IRONIC_VM_COUNT=3
@@ -102,7 +92,3 @@ Q_ML2_TENANT_NETWORK_TYPE=vxlan
 LOGFILE=/opt/stack/devstack.log
 LOGDIR=/opt/stack/logs
 IRONIC_VM_LOG_DIR=/opt/stack/ironic-bm-logs
-EOF
-sudo chown stack:stack /opt/stack/devstack -R
-sudo -u stack -H ./stack.sh
-
