--- a/datadog_checks_base/pyproject.toml
+++ b/datadog_checks_base/pyproject.toml
@@ -62,7 +62,8 @@ deps = [
     "pyyaml==5.4.1; python_version < '3.0'",
     "pyyaml==6.0.1; python_version > '3.0'",
     "requests-toolbelt==1.0.0",
-    "requests-unixsocket2==0.4.0",
+    "requests-unixsocket==0.3.0; python_version < '3.0'",
+    "requests-unixsocket2==0.4.0; python_version > '3.0'",
     "requests==2.27.1; python_version < '3.0'",
     "requests==2.32.2; python_version > '3.0'",
     "simplejson==3.19.2",
