adding collect_display_name_as_tag

--- a/windows_service/assets/configuration/spec.yaml
+++ b/windows_service/assets/configuration/spec.yaml
@@ -64,4 +64,10 @@ files:
             value:
               type: boolean
               example: false
+          - name: collect_display_name_as_tag
+            description: |
+              Whether or not to submit the Windows Service Display Name as the `display_name` tag.
+            value:
+              type: boolean
+              example: false
           - template: instances/default
