--- a/windows_service/datadog_checks/windows_service/data/conf.yaml.example
+++ b/windows_service/datadog_checks/windows_service/data/conf.yaml.example
@@ -61,6 +61,11 @@ instances:
     #
     # windows_service_startup_type_tag: false
 
+    ## @param collect_display_name_as_tag - boolean - optional - default: false
+    ## Whether or not to submit the Windows Service Display Name as the `display_name` tag.
+    #
+    # collect_display_name_as_tag: false
+
     ## @param tags - list of strings - optional
     ## A list of tags to attach to every metric and service check emitted by this instance.
     ##
