--- a/traefik_meshh/manifest.json
+++ b/traefik_meshh/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": "2.0.0",
   "app_uuid": "8ace5f4d-ba92-4b68-acf0-20275c8c2a2a",
-  "app_id": "traefik-mesh",
+  "app_id": "traefik-meshh",
   "display_on_public_website": false,
   "tile": {
     "overview": "README.md#Overview",
@@ -34,8 +34,8 @@
         "creates_events": false
       },
       "metrics": {
-        "prefix": "traefik_mesh.",
-        "check": "traefik_mesh.entrypoint.open_connections",
+        "prefix": "traefik_meshh.",
+        "check": "traefik_meshh.entrypoint.open_connections",
         "metadata_path": "metadata.csv"
       },
       "service_checks": {
@@ -43,13 +43,13 @@
       }
     },
     "dashboards": {
-      "Traefik Mesh Overview": "assets/dashboards/traefik_mesh_overview.json"
+      "Traefik Mesh Overview": "assets/dashboards/traefik_meshh_overview.json"
     },
     "monitors": {
       "High Request Count": "assets/monitors/high_request_count.json"
     },
     "logs": {
-      "source": "traefik_mesh"
+      "source": "traefik_meshh"
     }
   },
   "author": {
