--- a/datadog_checks_base/pyproject.toml
+++ b/datadog_checks_base/pyproject.toml
@@ -80,6 +80,7 @@ http = [
     "oauthlib==3.2.2; python_version > '3.0'",
     "pyjwt==1.7.1; python_version < '3.0'",
     "pyjwt==2.8.0; python_version > '3.0'",
+    "pyopenssl==24.1.0; python_version > '3.0'",
     "pysocks==1.7.1",
     "requests-kerberos==0.12.0; python_version < '3.0'",
     "requests-kerberos==0.14.0; python_version > '3.0'",
