--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -4,6 +4,7 @@ on:
   schedule:
   # At 2AM on Monday (UTC)
   - cron: "0 2 * * 1"
+  pull_request:
 
 jobs:
   update_dependencies:
@@ -26,6 +27,13 @@ jobs:
       run: |-
         ddev config set repos.core .
         ddev config set repo core
+    - name: Create token
+      uses: actions/create-github-app-token@v1
+      id: token-generator
+      with:
+        app-id: ${{ secrets.DD_AGENT_INTEGRATIONS_BOT_APP_ID }}
+        private-key: ${{ secrets.DD_AGENT_INTEGRATIONS_BOT_PRIVATE_KEY }}
+        repositories: integrations-core
     - name: Update dependencies
       run: |-
         ddev dep updates --sync
@@ -35,16 +43,17 @@ jobs:
       env:
         DD_GITHUB_USER: "${{ github.actor }}"
         DD_GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-    - name: Create token
-      uses: actions/create-github-app-token@v1
-      id: token-generator
-      with:
-        app-id: ${{ secrets.DD_AGENT_INTEGRATIONS_BOT_APP_ID }}
-        private-key: ${{ secrets.DD_AGENT_INTEGRATIONS_BOT_PRIVATE_KEY }}
-        repositories: integrations-core
+    # We generate the changelog hoping we guess the PR number correctly.
+    - name: Update changelogs
+      if: ${{ steps.cpr.outputs.pull-request-number }}
+      env:
+        GH_TOKEN:
+          ${{ github.token }}
+      run: |-
+        ddev release changelog new added -m "Update dependencies"
     - name: Create Pull Request
       id: cpr
-      uses: peter-evans/create-pull-request@v5
+      uses: peter-evans/create-pull-request@v6
       with:
         token: ${{ steps.token-generator.outputs.token }}
         commit-message: Update dependencies
@@ -59,7 +68,9 @@ jobs:
           ### Additional Notes
           <!-- Anything else we should know when reviewing? -->
 
-          This PR was automatically generated.
+          This PR was automatically generated. Here's the url for the job:
+          ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
 
           ### Review checklist (to be filled by reviewers)
 
@@ -73,17 +84,3 @@ jobs:
         base: master
         labels: bot,qa/skip-qa
         draft: false
-    # We generate the changelog if and only if the PR was created
-    - name: Update changelogs
-      if: ${{ steps.cpr.outputs.pull-request-number }}
-      env:
-        GH_TOKEN:
-          ${{ github.token }}
-      run: |-
-        gh pr checkout ${{ steps.cpr.outputs.pull-request-number }}
-        ddev release changelog new added -m "Update dependencies"
-        git config --global user.email "agent-integrations-dependency-bot@datadoghq.com"
-        git config --global user.name "Agent Integrations Dependency Bot"
-        git add .
-        git commit --amend --no-edit
-        git push origin HEAD --force
