--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -34,7 +34,7 @@ datadog-cisco-secure-firewall==1.0.0
 datadog-citrix-hypervisor==3.2.0
 datadog-clickhouse==3.5.0
 datadog-cloud-foundry-api==3.3.0
-datadog-cloudera==2.1.0
+datadog-cloudera==2.2.0-beta.1
 datadog-cockroachdb==3.3.0
 datadog-confluent-platform==1.10.1
 datadog-consul==2.6.0
