Add Traefik Mesh integration (#17585)
* Initial commit

* Add unit and end to end tests

* added more test and assets to integration

* sync CI

* fix dashboard and E2E tests

* fix metadata types

* added more Traefik config metrics

* Add changelog and readme

* remove additional changelog added

* apply readme suggestions

Co-authored-by: Austin Lai <76412946+alai97@users.noreply.github.com>

* apply suggestions to readme

Co-authored-by: Austin Lai <76412946+alai97@users.noreply.github.com>

* added logo and fixed nits

* removed unneeded PY2 import and made tests more readable

---------

Co-authored-by: Austin Lai <76412946+alai97@users.noreply.github.com>

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -598,6 +598,10 @@ coverage:
         target: 75
         flags:
         - torchserve
+      Traefik_Mesh:
+        target: 75
+        flags:
+        - traefik_mesh
       Traffic_Server:
         target: 75
         flags:
@@ -1440,6 +1444,11 @@ flags:
     paths:
     - torchserve/datadog_checks/torchserve
     - torchserve/tests
+  traefik_mesh:
+    carryforward: true
+    paths:
+    - traefik_mesh/datadog_checks/traefik_mesh
+    - traefik_mesh/tests
   traffic_server:
     carryforward: true
     paths:
