--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -173,6 +173,7 @@ datadog-tls==2.16.1
 datadog-tokumx==3.2.0
 datadog-tomcat==2.0.0
 datadog-torchserve==2.2.0
+datadog-traefik-mesh==1.0.0
 datadog-traffic-server==2.2.0
 datadog-twemproxy==1.15.0
 datadog-twistlock==3.6.0
