--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -99,6 +99,7 @@ datadog-kube-metrics-server==3.3.0
 datadog-kube-proxy==6.3.0
 datadog-kube-scheduler==4.10.0
 datadog-kubelet==7.13.1
+datadog-kubernetes-cluster-autoscaler==1.0.0
 datadog-kubernetes-state==8.1.0
 datadog-kyototycoon==2.5.0
 datadog-lighttpd==3.5.0
@@ -172,6 +173,7 @@ datadog-tls==2.16.1
 datadog-tokumx==3.2.0
 datadog-tomcat==2.0.0
 datadog-torchserve==2.2.0
+datadog-traefik-mesh==1.0.0
 datadog-traffic-server==2.2.0
 datadog-twemproxy==1.15.0
 datadog-twistlock==3.6.0
