--- a/tekton/manifest.json
+++ b/tekton/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": "2.0.0",
   "app_uuid": "4e8f129e-1c9b-4078-a966-f0099dbf9465",
   "app_id": "tekton",
-  "display_on_public_website": false,
+  "display_on_public_website": true,
   "tile": {
     "overview": "README.md#Overview",
     "configuration": "README.md#Setup",
