--- a/teleport/hatch.toml
+++ b/teleport/hatch.toml
@@ -2,3 +2,18 @@
 
 [[envs.default.matrix]]
 python = ["3.11"]
+
+[[envs.default.matrix]]
+python = ["3.11"]
+setup = ["caddy"]
+
+[envs.default.overrides]
+name."^py3.11$".e2e-env = { value = true }
+name."^py3.11-caddy$".e2e-env = { value = true }
+matrix.setup.e2e-env = { value = true, if = ["caddy"] }
+matrix.setup.env-vars = [
+  { key = "USE_TELEPORT_CADDY", value = "true", if = ["caddy"] },
+]
+
+[envs.default]
+e2e-env = false
