--- a/.github/workflows/claim-pypi-name.yaml
+++ b/.github/workflows/claim-pypi-name.yaml
@@ -1,10 +1,15 @@
+# This workflow claims package names on PyPI for our integrations by publishing empty packages.
+# The working packages can be found here:
+# https://dd-integrations-core-wheels-build-stable.datadoghq.com/targets/simple/index.html
+# This is a work-around until PyPI adds support for namespaces and we claim an entire namespace for Datadog.
 name: Build Placeholder PyPI Packages
 
 on:
+  workflow_dispatch:
   schedule:
-  # At 3AM UTC
-  # Running this every night strikes a good balance between claiming names fast without spamming PyPI with requests.
-  - cron: "0 3 * * *"
+    # At 3AM UTC
+    # Running this every night strikes a good balance between claiming names fast without spamming PyPI with requests.
+    - cron: "0 3 * * *"
 
 defaults:
   run:
